--- a/package.json
+++ b/package.json
@@ -10,17 +10,32 @@
     "apollo-boost": "0.4.3",
     "apollo-client": "2.6.3",
     "apollo-link-http": "1.5.15",
+    "gh-pages": "^2.2.0",
     "graphql": "latest",
     "graphql-tag": "latest",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-scripts": "1.1.0"
+    "react-scripts": "^3.4.1"
   },
   "devDependencies": {},
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
