--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "apollo-boost": "0.4.3",
     "apollo-client": "2.6.3",
     "apollo-link-http": "1.5.15",
+    "apollo-link-ws": "^1.0.20",
+    "firebase": "^7.14.2",
     "gh-pages": "^2.2.0",
     "graphql": "latest",
     "graphql-tag": "latest",
     "react": "16.8.6",
+    "react-apollo": "^3.1.5",
     "react-dom": "16.8.6",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "devDependencies": {},
   "scripts": {
